fixed main issues

--- a/index.html
+++ b/index.html
@@ -15,19 +15,23 @@
         <p>10:30 - 12:30</p>
         <p>16 - 19:30</p>
         <br />
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          width="20"
-          height="18"
-          fill="currentColor"
-          class="bi bi-lock"
-          viewBox="0 0 16 16"
-        >
-          <path
-            d="M8 1a2 2 0 0 1 2 2v4H6V3a2 2 0 0 1 2-2zm3 6V3a3 3 0 0 0-6 0v4a2 2 0 0 0-2 2v5a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V9a2 2 0 0 0-2-2zM5 8h6a1 1 0 0 1 1 1v5a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1V9a1 1 0 0 1 1-1z"
-          />
-        </svg>
-        <h2>chiuso lunedì e giovedì</h2>
+        <div>
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="20"
+            height="18"
+            fill="currentColor"
+            class="bi bi-lock"
+            viewBox="0 0 16 16"
+          >
+            <path
+              d="M8 1a2 2 0 0 1 2 2v4H6V3a2 2 0 0 1 2-2zm3 6V3a3 3 0 0 0-6 0v4a2 2 0 0 0-2 2v5a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V9a2 2 0 0 0-2-2zM5 8h6a1 1 0 0 1 1 1v5a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1V9a1 1 0 0 1 1-1z"
+            />
+          </svg>
+          <p>chiuso</p>
+        </div>
+
+        <h2>lunedì e giovedì</h2>
       </div>
 
       <div id="contact-links">
@@ -100,7 +104,7 @@
                 d="M8 8a2 2 0 1 1 0-4 2 2 0 0 1 0 4zm0 1a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"
               />
             </svg>
-            vicolo san giacomo 7, <br />
+            vicolo san giacomo 7 <br />
             castell'arquato</a
           >
         </div>
